refactor: Remove GenericBackupException in favour of BackupException